# grad24

./: README.md  launch.ps1  spada.py
mtx_files/: bayer10.mtx  bcspwr01.mtx  ca-CondMat.mtx  cari.mtx  email-Enron.mtx  wiki-Vote.mtx
spada_32_threads/: CMakeLists.txt  spada_16_2.cu  spada_1_32.cu  spada_2_16.cu  spada_32_1.cu  spada_4_8.cu  spada_8_4.cu  spada_lib.cu  spada_lib.h
spada_64_threads/: CMakeLists.txt  spada_16_4.cu  spada_1_64.cu  spada_2_32.cu  spada_32_2.cu  spada_4_16.cu  spada_64_1.cu  spada_8_8.cu  spada_lib.cu  spada_lib.h
